--- a/docs/administration/stores-creation.mdx
+++ b/docs/administration/stores-creation.mdx
@@ -7,10 +7,20 @@ This article explains how you can create a new store within your organization on
 
 ## How to create a new store
 
-1. **Access 'Stores':** As an administrator, or with a role that enables you to take this action, log in and head to the **'Stores'** section, which you can find in the left menu of our platform under the **'Administration'** section. This space is intended for the management of stores currently created in your organization, as well as allowing you to add new ones.
-2. **Add a new store:** Click on the **'Create store'** button, which you will find at the top right of the **'Stores'** page. By doing so, you will start the process of creating a new store in your organization. This will open a new page with a single field, in which you must enter the name of the store to be created.
-3. **Enter the name of your store:** Enter the name of the store to be created and click on the **'Create'** button.
-4. **Access your new store:** Finally, to manage your new store, you can click on the **'Change store'** button located in the top right corner of your account settings. This way, you can access and start configuring it within our platform.
+<Steps>
+    <Step title="Access 'Stores'">
+    As an administrator, or with a role that enables you to take this action, log in and head to the **'Stores'** section, which you can find in the left menu of our platform under the **'Administration'** section. This space is intended for the management of stores currently created in your organization, as well as allowing you to add new ones.
+    </Step>
+    <Step title="Add a new store">
+    Click on the **'Create store'** button, which you will find at the top right of the **'Stores'** page. By doing so, you will start the process of creating a new store in your organization. This will open a new page with a single field, in which you must enter the name of the store to be created.
+    </Step>
+    <Step title="Enter the name of your store">
+    Enter the name of the store to be created and click on the **'Create'** button.
+    </Step>
+    <Step title="Access your new store">
+    Finally, to manage your new store, you can click on the **'Change store'** button located in the top right corner of your account settings. This way, you can access and start configuring it within our platform.
+    </Step>
+</Steps>
 
 ## In conclusion
 
