--- a/docs/administration/users-management.mdx
+++ b/docs/administration/users-management.mdx
@@ -7,10 +7,10 @@ Our platform includes an advanced system for user management, based on organizat
 
 ## How to invite users, assign stores, and grant permissions
 
-- User invitations: To be part of our platform, each individual can have a unique user account. The owner of an organization can invite these users to join, assigning them access to the necessary stores. This allows each user to manage their own personal profile, whether to create their own organization or join an existing one. If the user does not yet have an account, they can create one using the invitation email and access the organization without any issues. You can learn more about this in our article, **'Invite new users'**.
-- Store assignment: When inviting a user, the organization's administrators can specify which stores the user will have access to. If the organization has only one store, access is automatically granted to it. Additionally, it's possible to update the store access permissions at any time.
-- Role assignment: In the user management section, administrators can assign specific roles to each user, indicating the role they will have within a particular store. If the organization includes several stores, appropriate roles must be created for each. You can learn more about this in our article, **'How do roles work?'**.
-- User removal: Administrators have the ability to remove any user's access within their organization, simply by accessing the delete option in the user management section of any store.
+- **User invitations:** To be part of our platform, each individual can have a unique user account. The owner of an organization can invite these users to join, assigning them access to the necessary stores. This allows each user to manage their own personal profile, whether to create their own organization or join an existing one. If the user does not yet have an account, they can create one using the invitation email and access the organization without any issues. You can learn more about this in our article, **'Invite new users'**.
+- **Store assignment:** When inviting a user, the organization's administrators can specify which stores the user will have access to. If the organization has only one store, access is automatically granted to it. Additionally, it's possible to update the store access permissions at any time.
+- **Role assignment:** In the user management section, administrators can assign specific roles to each user, indicating the role they will have within a particular store. If the organization includes several stores, appropriate roles must be created for each. You can learn more about this in our article, **'How do roles work?'**.
+- **User removal:** Administrators have the ability to remove any user's access within their organization, simply by accessing the delete option in the user management section of any store.
 
 ## How to create, modify, and delete user roles
 
