--- a/integrations/channels/set-up-integration-with-square.mdx
+++ b/integrations/channels/set-up-integration-with-square.mdx
@@ -25,7 +25,7 @@ Once you have a store in Square, we can move on to the next step to learn the cr
 To set up Square in Infinity, you only need four credentials from your store in Square (**Access Token, Location ID, Physical Location ID, Tax ID**). Below, we explain the steps to follow to obtain each of these fields correctly.
 
 1. Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the **'Access Token'** credential from your account.
-<Frame type="glass">
+<Frame caption="Square Dashboard">
   <img src="/images/square_images/secondStep1.png" />
 </Frame>
 ![Image](/images/square_images/secondStep1.png)
