--- a/docs/administration/multi-store-management.mdx
+++ b/docs/administration/multi-store-management.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Multi-stores management'
+title: 'Multi-store management'
 description: 'Discover how to manage multiple stores using our platform.'
 ---
 
